# 611406c82e3e

./: .gitignore  CMakeLists.txt  flip_endianness.js  parse_uri.cpp  parse_uri.h  q1.cpp  q2.cpp  q3.cpp  q3.h  threatspike.txt
Google_tests/: CMakeLists.txt  q3_tests.cpp
